Подправил пробросы (не все), добавил в phpstrorm sql

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,20 @@
+Options +FollowSymLinks -MultiViews
 RewriteEngine on
 RewriteRule ^cat/([^/]+)/?$ index.php?page=cat&cat=$1 [L]
+RewriteRule ^cat/([^/]+)/([^/]+)/?$ index.php?page=cat&cat=$1&p=$2 [L]
 RewriteRule ^product/([^/]+)/?$ index.php?page=product&id=$1 [L]
 RewriteRule ^lk/?$ index.php?page=lk [L]
+RewriteRule ^auth/?$ index.php?page=auth [L]
+RewriteRule ^registration/?$ index.php?page=registration [L]
+RewriteRule ^cart/?$ index.php?page=cart [L]
+RewriteRule ^order1/?$ index.php?page=order1 [L]
+RewriteRule ^order2/?$ index.php?page=order2 [L]
+RewriteRule ^order3/?$ index.php?page=order3 [L]
+RewriteRule ^order4/?$ index.php?page=order4 [L]
+RewriteRule ^users/?$ admin/index.php?page=users [L]
+RewriteRule ^users/([^/]+)/?$ admin/index.php?page=users&p=$1& [L]
+RewriteRule ^cats/?$ admin/index.php?page=cats [L]
+RewriteRule ^item/cat([^/]+)/([^/]+)/?$ admin/?page=showgood&id=$2&id_cat=$1 [L]
+RewriteRule ^user/([^/]+)/?$ admin/index.php?page=user&id=$1& [L]
+RewriteRule ^showcat/([^/]+)/?$ admin/index.php?page=showcat&id=$1& [L]
+RewriteRule ^newgood/([^/]+)/?$ admin/index.php?page=showgood&idcat=$1& [L]
